--- a/app/src/main/res/layout/activity_detalhes.xml
+++ b/app/src/main/res/layout/activity_detalhes.xml
@@ -10,4 +10,34 @@
         android:layout_height="wrap_content"
         android:id="@+id/detalhe_item_texto" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/text_data"
+        android:layout_below="@+id/detalhe_item_texto"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="98dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/text_Posicao"
+        android:layout_below="@+id/text_data"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="66dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/text_Mensagem"
+        android:layout_below="@+id/text_Posicao"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="71dp" />
+
 </RelativeLayout>
